--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+# Ignore all
+*
+
+# Unignore all with extensions
+!*.*
+
+# Unignore all dirs
+!*/
+
+### Above combination will ignore all files without extension ###
+
+
+### Begin github python .gitignore template ###
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
